--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "args": ["--world", "assets/worlds/example.yaml"]
         },
         {
-            "name": "llama3.2",
+            "name": "llama3.2 (Ollama)",
             "type": "debugpy",
             "request": "launch",
             "module": "slork.cli",
@@ -23,13 +23,22 @@
             "args": ["--world", "assets/worlds/example.yaml", "--ai-model", "llama3.2"]
         },
         {
-            "name": "gpt-oss:20b-cloud",
+            "name": "gpt-oss:20b-cloud (Ollama)",
             "type": "debugpy",
             "request": "launch",
             "module": "slork.cli",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/worlds/example.yaml", "--ai-model", "gpt-oss:20b-cloud"]
+            "args": ["--world", "assets/worlds/saltwind_station.yaml", "--ai-model", "gpt-oss:20b-cloud"]
+        },
+        {
+            "name": "gpt-4o-mini (OpenAI)",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "slork.cli",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": ["--world", "assets/worlds/saltwind_station.yaml", "--ai-backend", "openai", "--ai-model", "gpt-4o-mini"]
         }
     ]
 }
