Add optional ai_guidance section to world format

--- a/assets/worlds/example.yaml
+++ b/assets/worlds/example.yaml
@@ -6,6 +6,10 @@ world:
   initial_inventory:
     - lint
 
+ai_guidance:
+  text_generation: The tone should be quirky and fun, as if the player has accidentally falling into a Terry Pratchet novel.
+  image_generation: vibrant, warm tones, fantasy storybook style.
+
 flags:
   - gate_unlocked
 
