--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "module": "slork.cli",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/worlds/example.yaml"]
+            "args": ["--world", "assets/worlds/saltwind_station.yaml"]
         },
         {
             "name": "llama3.2 (Ollama)",
@@ -38,7 +38,7 @@
             "module": "slork.cli",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/worlds/example.yaml", "--ai-backend", "openai", "--ai-model", "gpt-4o-mini"]
+            "args": ["--world", "assets/worlds/saltwind_station.yaml", "--ai-backend", "openai", "--ai-model", "gpt-4o-mini"]
         }
     ]
 }
