--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "module": "slork.cli",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/worlds/saltwind_station.yaml"]
+            "args": ["--world", "assets/worlds/example.yaml"]
         },
         {
             "name": "llama3.2 (Ollama)",
