More web app dev

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,13 +41,13 @@
             "args": ["--world", "assets/worlds/saltwind_station.yaml", "--ai-backend", "openai", "--ai-model", "gpt-4o-mini"]
         },
         {
-            "name": "Web - No AI",
+            "name": "Web",
             "type": "debugpy",
             "request": "launch",
             "module": "slork.webapp",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/worlds/example.yaml"]
+            "args": ["--world", "assets/worlds/example.yaml", "--ai-backend", "openai", "--ai-model", "gpt-4o-mini"]
         },
     ]
 }
