--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -56,5 +56,16 @@
                 "--ai-image-quality", "low"
             ]
         },
+        {
+            "name": "Web - No AI",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "slork.webapp",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "--world", "assets/worlds/saltwind_station.yaml", 
+            ]
+        },
     ]
 }
