--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -67,5 +67,39 @@
                 "--world", "assets/worlds/saltwind_station.yaml", 
             ]
         },
+        {
+            "name": "Titan - No AI",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "slork.cli",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": ["--world", "assets/worlds/titan.yaml"]
+        },
+        {
+            "name": "Titan - Ollama",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "slork.cli",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": ["--world", "assets/worlds/titan.yaml", "--ai-model", "gpt-oss:20b-cloud"]
+        },
+        {
+            "name": "Titan - Web",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "slork.webapp",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "--world", "assets/worlds/titan.yaml", 
+                "--ai-backend", "openai", 
+                "--ai-model", "gpt-5-nano",
+                "--ai-image-model", "gpt-image-1-mini",
+                "--ai-image-size", "1024x1024",
+                "--ai-image-quality", "low"
+            ]
+        },
     ]
 }
