--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets/worlds/example.yaml", 
+                "--world", "assets_renamed/titan/world.yaml", 
                 "--dev", "True"
             ]
         },
@@ -32,7 +32,11 @@
             "module": "slork.cli",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/worlds/saltwind_station.yaml", "--ai-model", "gpt-oss:20b-cloud"]
+            "args": [
+                "--world", "assets_renamed/titan/world.yaml", 
+                "--dev", "True",
+                "--ai-model", "gpt-oss:20b-cloud"
+            ]
         },
         {
             "name": "gpt-4o-mini (OpenAI)",
@@ -96,7 +100,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets/worlds/titan.yaml", 
+                "--world", "assets_renamed/titan/world.yaml", 
                 "--dev", "True"
             ]
        },
