--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets_renamed/titan/world.yaml", 
+                "--world", "assets/saltwind_station/world.yaml", 
                 "--dev", "True"
             ]
         },
@@ -23,7 +23,7 @@
             "module": "slork.cli",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/worlds/example.yaml", "--ai-model", "llama3.2"]
+            "args": ["--world", "assets/example/world.yaml", "--ai-model", "llama3.2"]
         },
         {
             "name": "gpt-oss:20b-cloud (Ollama)",
@@ -45,7 +45,7 @@
             "module": "slork.cli",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/worlds/saltwind_station.yaml", "--ai-backend", "openai", "--ai-model", "gpt-4o-mini"]
+            "args": ["--world", "assets/saltwind_station/world.yaml", "--ai-backend", "openai", "--ai-model", "gpt-4o-mini"]
         },
         {
             "name": "Web",
@@ -55,7 +55,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets/worlds/saltwind_station.yaml", 
+                "--world", "assets/saltwind_station/world.yaml", 
                 "--ai-backend", "openai", 
                 "--ai-model", "gpt-5-nano",
                 "--ai-image-model", "gpt-image-1-mini",
@@ -71,7 +71,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets/worlds/saltwind_station.yaml", 
+                "--world", "assets/saltwind_station/world.yaml", 
             ]
         },
         {
@@ -100,7 +100,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets_renamed/titan/world.yaml", 
+                "--world", "assets/titan/world.yaml", 
                 "--dev", "True"
             ]
        },
